[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cobbler-tftp"
dynamic = [
  "authors",
  "urls",
  "description",
  "keywords",
  "license",
  "classifiers",
  "version",
  "dependencies",
  "readme",
  "optional-dependencies"
]

[project.scripts]
cobbler-tftp = "cobbler_tftp.cli:cli"

[tool.isort]
profile = "black"

[tool.towncrier]
directory = "changelog.d"
filename = "changelog/v{version}.md"
package = "cobbler_tftp"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
template = "changelog.d/changelog_template.jinja"
title_format = "# Cobbler-TFTP [{version}](https://github.com/cobbler/cobbler-tftp/tree/v{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/cobbler/cobbler-tftp/issues/{issue})"
single_file = false
wrap = true

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true
