[metadata]
name = cobbler_tftp
author = Team Cobbler
author_email = cobbler.project@gmail.com
url = https://github.com/cobbler/cobbler-tftp
description = The tftp server daemon for Cobbler
long_description = file: README.md
long_description_content_type = text/markdown
keywords = cobbler, tftp
license = GPL v2.0 License
classifiers =
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python :: 3

[options]
zip_safe = True
package_dir=
  =src
packages = find:
include_package_data = True
setup_requires =
  setuptools>=44.11.0
  setuptools-scm~=7.1.0
  wheel>=0.37.1
install_requires =
  python_version>=3.6
  pip>=21.3.1
  fbtftp>=0.5
  python-daemon>=3.0.1
  pyyaml>=6.0

[options.extras_require]
tests_require =
  pytest>=7.0.1
  pytest-mock>=3.6.1
lint_requires =
  pre-commit>=2.0.1
  black>=22.1.0
  pyright>=0.0.13
  isort>=5.8.0
doc =
  Sphinx>=5.3.0
  sphinx-rtd-theme>=1.2.0

[options.packages.find]
where=src
