[metadata]
name = cobbler_tftp
author = Team Cobbler
author_email = cobbler.project@gmail.com
url = https://github.com/cobbler/cobbler-tftp
description = The tftp server daemon for Cobbler
long_description = file: README.md
long_description_content_type = text/markdown
keywords = cobbler, tftp
license = GPL v2.0 License
classifiers =
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python :: 3.8

[options]
zip_safe = True
package_dir=
  =src
packages = find:
include_package_data = True
setup_requires =
  setuptools
  setuptools-scm>=8.0.0
  wheel
install_requires =
  fbtftp>=0.5
  python-daemon>=3.0.1
  pyyaml>=6.0
  click>=8.0.4
  schema>=0.6.7

[options.extras_require]
tests_require =
  pytest>=7.0.1
  pytest-mock>=3.6.1
  pytest-cov>=4.1.0

lint_requires =
  pre-commit>=2.0.1
  black>=22.1.0
  pyright>=0.0.13
  isort>=5.8.0
  prospector>=1.7.7

doc =
  Sphinx>=5.3.0
  sphinx-rtd-theme>=1.2.0
  towncrier>=22.12.0

dev_requires =
  pip>=21.3.1

[options.packages.find]
where=src
exclude =
  tests*
